--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body style="background-color: rgba(223, 211, 211, 0.856);">
     <div id="root"></div>
+    <h1>testing</h1>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
